# findroots

./: README.md  pyproject.toml  report.ipynb
devtools/: format.ps1
old/code/: F.m  FPiteration.m  FPiteration2.asv  FPiteration2.m  FPiteration3.m  FPiteration4.m  bisectionF (old).m  bisectionF.m  cobwebf1.m  cobwebf3.asv  cobwebf3.m  f1.m  f2.m  f3.m  f4.m  plotCobweb.m  plotF.m  q.m  rough.asv  rough.m  table1.m
src/findroots/: binarysearch.py  draft.py  functions.py  plot.py  types.py
stubs/latexify/: __init__.pyi
tests/test_findroots/: test_binarysearch.py
